--- a/backend/.env
+++ b/backend/.env
@@ -4,6 +4,7 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
+# ENTER Your DATABASE_URL
 DATABASE_URL="mongodb://root:root@localhost:27017/product_db?serverSelectionTimeoutMS=2000&authSource=admin&directConnection=true"
 COMPOSE_PROJECT_NAME="system"
 PROJECT_PACKAGE_NAME="system"
