update url database
use mongodb atlat

--- a/backend/.env
+++ b/backend/.env
@@ -5,7 +5,7 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 # ENTER Your DATABASE_URL
-DATABASE_URL="mongodb://root:root@localhost:27017/product_db?serverSelectionTimeoutMS=2000&authSource=admin&directConnection=true"
+DATABASE_URL="mongodb+srv://root:root@cluster0.8ntz8.mongodb.net/product_db?retryWrites=true&w=majority&appName=Cluster0"
 COMPOSE_PROJECT_NAME="system"
 PROJECT_PACKAGE_NAME="system"
 
